* 2012-09-05 - marcus.klein@open-xchange.com

 - Fix for bug 22915: No NPE if SOAP method is not found.

* 2012-09-05 - thorben.betten@open-xchange.com

 - Fix for bug 22897: Make generated session instance available, rather than only providing its identifier
 - Fix for bug 22918: Deal with possible absent ThreadState instance
 - Fix for bug 22921: Added null guard to prevent NPE
 - Fix for bug 22920: Added null guard to prevent NPE
 - Fix for bug 22891: Added null guard
 - Fix for bug 22890: Added null guard
 - Fix for bug 22883: Added missing reseller interfaces
 - Fix for bug 22928: Fixed activator of bundle 'com.openexchange.user.copy'
 - Fix for bug 22870: Checking for possibly empty mail identifier on action=get_structure request
 - Fix for bug 22927: Fixed CleanUpActivator of bundle 'com.openexchange.subscribe'
 - Fix for bug 22926: Fixed activator of bundle 'com.openexchange.mobile.configuration.json'
 - Fix for bug 22929: Prefer user name when generating NoSuchUserException's message

* 2012-09-04 - thorben.betten@open-xchange.com

 - Fix for bug 22886: Read and write support for ISO-2022-CN charset
 - Fix for bug 22884: Set appropriate content type
 - Fix for bug 22777: Fixed possible NPE when saving a draft
 - Fix for bug 22882: Prevent possible NPE
 - Fix for bug 22880: Prevent possible NPE

* 2012-09-03 - thorben.betten@open-xchange.com

 - Fix for bug 22889: No keep-alive run if very first request body chunk not yet received

* 2012-08-31 - marcus.klein@open-xchange.com

 - Fix for bug 22751: Registering properly the actions for the conversion HTTP/JSON interface within dispatcher.

* 2012-08-29 - thorben.betten@open-xchange.com

 - Fix for bug 22860: Prevent NPE in file management

* 2012-08-24 - jan.bauerdick@open-xchange.com

 - Fix for bug 22838: New implementation of com.openexchange.sessiond.impl.SessionHandler.merge

* 2012-08-20 - marcus.klein@open-xchange.com
